Fix sidebars and nav z-index

--- a/public/css/components/_main.scss
+++ b/public/css/components/_main.scss
@@ -144,7 +144,7 @@ header {
                 top: 100%;
                 left: 0px;
                 display: none;
-                z-index: 100;
+                z-index: 1000;
                 border-radius: 0 0 4px 4px;
                 border: 1px solid #333;
                 box-shadow: 0 16px 16px #00000050;
@@ -234,7 +234,7 @@ main.linear {
             position: absolute;
             height: 100%;
             background-color: #1f1f1f;
-            z-index: 10;
+            z-index: 100;
             width: 240px;
             transition: transform .2s ease, padding .2s ease;
 
